Fixed bugs in pagination UI: 1. Pagination UI was overlapping the table when search is disabled 2. Moving to float with clear-fix for header and footer layout, as that is the best options available. Using absolute for right alignment was causing the above. 3. Pagination UI in the footer was not appearing as expected. 4. Increasing records displayed in the demo app.

--- a/addon/styles/pagination-ui.less
+++ b/addon/styles/pagination-ui.less
@@ -1,9 +1,8 @@
 .pagination-ui {
   .inline-block;
   .align-top;
-  .absolute;
 
-  right: 0px;
+  float: right;
 
   .page-list {
     .inline-block;
