--- a/addon/styles/shared.less
+++ b/addon/styles/shared.less
@@ -104,3 +104,13 @@
   border-left: 1px solid lightgrey;
   margin-left: 5px;
 }
+
+.clear-fix {
+  &:after {
+    content: " ";
+    visibility: hidden;
+    display: block;
+    height: 0;
+    clear: both;
+  }
+}
